Updated tests and docstrings.

*****

Updated cli_ads_add() to enable passing tags to the entries.
Updated tests for many user-input cases for this cli.

*****

Fixed screen output when cli_ads_add()'s input prompt is blank.
Added test.

*****

Some PEP8ing.


*****  Sat Dec 4 13:08:59 CET 2021  *****

Updated docs adding the tag directive
and updating the index and the ads-add directive.

*****

Improved syntax in am.add_bibtex().
(No actual change in behavior)


*****  Sat Dec 4 19:58:34 CET 2021  *****

Implemented bm.display_list() to display a list of BibTeX entries
with different verbosity levels.
Documented and tested.

*****

Enabled possibility to display entries with given tags from cli.
Modified cli_search() and cli_tag() to use bm.display_list().

*****

Changed verb argument user-interface for bibm search command,
now it requires an interger value (thus enabling negative values).
Updated docs and tests.


*****  Sun Dec 5 17:33:57 CET 2021  *****

Implemented u.tokenizer() function to fast-track formatted-text
tuples for attribute:value pairs.
Documented and tested.

*****

Refactored bm.display_list() to display formatted text
rather than plain text.
Updated tests.

*****

Refactored am.display() to display formatted text
rather than plain text.
Updated tests.

*****

Updated api.rst docs.

*****

Bumped bibmanager to version 1.4.0
When merged, this commit solves #75

*****

Added mock_init inpo tests that require the 'style' config param
Avoiding Travis error:
ValueError: 'style' is not a valid bibmanager config parameter.

*****

Updated travis.yml file to include python versions 3.6 to 3.9


*****  Thu Dec 16 23:38:44 CET 2021  *****

Updated sample.bib file.
Updated tests and other auxilliary scripts accordingly.

*****

Updated docs.

*****

Implemented u.parse_search() to parse the input texts that later go
into bm.search().
Documented and tested.

*****

Replaced manual parsing cli_search() with u.parse_search().
